<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/reminder_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/reminder_default_title"
        />

    <TextView
        android:id="@+id/reminder_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/reminder_title"
        android:text="@string/reminder_default_date"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"
        android:padding="8dp"
        android:text="@string/reminder_default_time" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/alarm_reminder"
        android:outlineSpotShadowColor="@color/colorPrimaryDark" />

</androidx.cardview.widget.CardView>