<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_greetings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />


    <TextView
        android:id="@+id/textView_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/main_reminder_request"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_greeting" />

    <ImageView
        android:id="@+id/imageView_reminder"
        android:layout_width="270dp"
        android:layout_height="180dp"
        android:layout_marginTop="4dp"
        android:onClick="Reminder"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_reminder"
        app:srcCompat="@drawable/main_reminder" />

    <TextView
        android:id="@+id/textView_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/main_weather_request"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_reminder" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="180dp"
        android:layout_marginBottom="60dp"
        android:onClick="Weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_weather"
        app:layout_constraintVertical_bias="0.601"
        app:srcCompat="@drawable/main_weather" />

</androidx.constraintlayout.widget.ConstraintLayout>